# tieralloc

./: CMakeLists.txt  README.md
benchmark/: bench_alloc.cc  bench_roll.cc
include/: numa_probe.h  tieralloc.h
pytorch_shim/: CMakeLists.txt  __init__.py  setup.py  tieralloc_shim.cpp  tieralloc_torch.cpp
src/: allocator.cc  interpose.cc  migrate.cc  numa_probe.cc  policy.cc  stats.cc  throttle.cc
tools/: tierallocctl.cc
